--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -31,9 +31,9 @@
         display: flex;
         align-items: center;
     }
-   </style>
+   </style> 
 
-    <div id="filters">
+    <!-- <div id="filters">
         <div class="filter">
             <div><i class="fa-solid fa-fire"></i></div>
             <p>Trending</p>
@@ -77,14 +77,14 @@
         <div class="filter">
             <div><i class="fa-solid fa-sailboat"></i></div>
             <p>Boat</p>
-        </div>
-        <div class="tax-toggle">
+        </div> -->
+        <!-- <div class="tax-toggle">
             <div class="form-check-reverse form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                 <label class="form-check-label" for="flexSwitchCheckDefault">Display Total after taxes</label>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <% for(let listing of allListing) { %>
             <a href="/listings/<%= listing._id %>" class="listing-link">
